// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatList /> renders correctly 1`] = `
<a
  className="MuiButtonBase-root-63 MuiListItem-root-53 MuiListItem-default-56 MuiListItem-gutters-60 MuiListItem-button-61"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  Avatar
  <div
    className="MuiListItemText-root-66"
  >
    <span
      className="MuiTypography-root-72 MuiTypography-subheading-79 MuiListItemText-primary-69"
    >
      test
    </span>
    <p
      className="MuiTypography-root-72 MuiTypography-body1-81 MuiTypography-colorTextSecondary-94 MuiListItemText-secondary-70"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-96"
  />
</a>
`;

exports[`<ChatList /> renders correctly active 1`] = `
<a
  className="MuiButtonBase-root-63 MuiListItem-root-53 MuiListItem-default-56 MuiListItem-gutters-60 MuiListItem-button-61 ChatListItem-activeItem-52"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  Avatar
  <div
    className="MuiListItemText-root-66"
  >
    <span
      className="MuiTypography-root-72 MuiTypography-subheading-79 MuiListItemText-primary-69"
    >
      test
    </span>
    <p
      className="MuiTypography-root-72 MuiTypography-body1-81 MuiTypography-colorTextSecondary-94 MuiListItemText-secondary-70"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-96"
  />
</a>
`;

exports[`<ChatList /> renders correctly disabled 1`] = `
<a
  className="MuiButtonBase-root-63 MuiButtonBase-disabled-64 MuiListItem-root-53 MuiListItem-default-56 MuiListItem-gutters-60 MuiListItem-disabled-58 MuiListItem-button-61"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="-1"
>
  Avatar
  <div
    className="MuiListItemText-root-66"
  >
    <span
      className="MuiTypography-root-72 MuiTypography-subheading-79 MuiListItemText-primary-69"
    >
      test
    </span>
    <p
      className="MuiTypography-root-72 MuiTypography-body1-81 MuiTypography-colorTextSecondary-94 MuiListItemText-secondary-70"
    >
      2 days ago
    </p>
  </div>
</a>
`;
